--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="https://bootswatch.com/4/lux/bootstrap.min.css">
     <title>Rocket Launch</title>
   </head>
   <body>
